--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -9,8 +9,9 @@
 	background-color:$nav;
 	height: 80px;
 	.logo {@include span(2 wide first);
-			background-color:$one; }
-	.nav-top { @include span(8); @include vertical-align;
+			background-color:$one;
+			@include vertical-align; }
+	.nav-top { @include span(7); @include vertical-align;
 				@include pal(1.1em, 700);
 				text-align: right;
 				color: $gray;
@@ -20,13 +21,18 @@
 				}
 
 			}
-
+	.menu-icons {@include span(2); @include vertical-align;
+				 font-size: 2em; text-align:right;
+				 a{color:darken($gray, 20%);
+				 &:hover {color:darken($gray, 25%); } 
+				 } 
+				}
 	.profile {border-radius:50%; @include span(1 of 12 last);
 			width: 46px; height: 46px; 
 			background-color:gray;
 			@include vertical-align;
 				&:hover {
-					&::after {}
+					background-color:$gray;
 				}
 				}
 	}
