--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -72,7 +72,7 @@
 		h3 {@include rob(1.4em,400);}
 		section{
 			a{
-				width: span(1 of 4);
+				img{width: span(1 of 4);}
 				text-transform: uppercase;
 				text-decoration: none;
 			}
