--- a/css/style.css
+++ b/css/style.css
@@ -1497,10 +1497,14 @@ select {
   font: 1.4em "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 400; }
 #sign .formdone section a {
+  width: 20%;
+  float: left;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
   text-transform: uppercase;
   text-decoration: none; }
 #sign .formdone section a img {
-  width: 21.05263%; }
+  fill: #BC4444; }
 
 footer {
   max-width: 100%;
