--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -72,9 +72,12 @@
 		h3 {@include rob(1.4em,400);}
 		section{
 			a{
-				img{width: span(1 of 4);}
+				@include span(1 of 4 split);
 				text-transform: uppercase;
 				text-decoration: none;
+				img{
+					fill:$ind-red;
+				}
 			}
 		}
 	}
