--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,11 +8,11 @@ $susy: (
   global-box-sizing: border-box,
   utter-position: split,
   debug: (
-    image: show-columns,
+    image: hide,
     output: overlay,
     toggle: bottom left
     )
-  ); 
+  );
 
 
 // Variables
@@ -57,7 +57,7 @@ $button-color-raised: #fff !default;
 // size
 $lg:  1200px;
 $med:  952px;
-$sm:   750px; 
+$sm:   750px;
 
 
 @import "top";
@@ -67,6 +67,3 @@ $sm:   750px;
 @import "button";
 @import "landing";
 @import "footer";
-
-
-
