--- a/css/style.css
+++ b/css/style.css
@@ -1455,7 +1455,8 @@ select {
     width: 91.52542%;
     height: 45px; } }
 #sign .formdone {
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 100px; }
 #sign .formdone h3 {
   font: 1.4em "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 400; }
