--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -69,6 +69,7 @@
 		@include breakpoint(max-width ($sm - 1)){ width:span(11 of 12); height:45px;}
 	}
 	.formdone {text-align:center;
+		margin-bottom : 100px;
 		h3 {@include rob(1.4em,400);}
 		section{
 			a{
