--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -69,8 +69,11 @@
 		@include breakpoint(max-width ($sm - 1)){ width:span(11 of 12); height:45px;}
 	}
 	.formdone {text-align:center;
-		margin-bottom : 100px;
+		margin-bottom : 300px;
 		h3 {@include rob(1.4em,400);}
+		a.faded{
+			opacity: 0.4;
+		};
 		section{
 			a{
 				@include span(1 of 4 split);
