--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -4,6 +4,7 @@
 	@include span (full);
 	background-color:teal;
 	position: relative;
+	z-index:2;
 	overflow: auto;
 	text-align:center;
 	margin-bottom:0.5em;
