--- a/css/style.css
+++ b/css/style.css
@@ -489,9 +489,9 @@ head:hover ~ #top:before, head:hover ~ body #top:before {
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
-#top .profile:hover {
+#top .profile:hover, #top .profile:focus {
   background-color: rgba(0, 0, 0, 0.6); }
-#top .profile:hover div {
+#top .profile:hover div, #top .profile:focus div {
   display: block; }
 #top .profile div {
   display: none;
@@ -515,6 +515,8 @@ head:hover ~ #top:before, head:hover ~ body #top:before {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
 #top .profile div a:last-child {
   border-bottom: none; }
+#top .profile div a:hover {
+  background-color: rgba(0, 0, 0, 0.4); }
 
 .slider {
   width: 100%;
