--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -33,7 +33,7 @@
 			background-color:gray;
 
 			@include vertical-align;
-			&:hover {
+			&:hover,&:focus {
 				background-color:rgba(0, 0, 0, 0.6);
 				div {display:block;}
 			}
@@ -56,6 +56,7 @@
 						@include rob(0.8em,700);
 						border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 						&:last-child {border-bottom:none;}
+						&:hover {background-color: rgba(0, 0, 0, 0.4); }
 					}
 					}
 				}
