--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,7 @@ $susy: (
   global-box-sizing: border-box,
   utter-position: split,
   debug: (
-    image: show-columns,
+    image: hide,
     output: overlay,
     toggle: bottom left
     )
