--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -25,6 +25,7 @@
 	.menu-icons {@include span(2); @include vertical-align;
 				 font-size: 2em; text-align:right;
 				 a{color:darken($gray, 20%); margin:0 0.2em;
+				 i{position: relative;}
 				 &:hover {color:darken($gray, 25%); } 
 				 } 
 				}
