--- a/sass/lib/_mixins.scss
+++ b/sass/lib/_mixins.scss
@@ -1,8 +1,10 @@
 // Collection of Mixins
 
 
+@import "user";
 @import "card";
 @import "typography";
+
 
 // Hide from screenreaders and browsers
 //
