--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,7 @@ $gray :#D6DDE3;
 $footer-gray:#45494d;
 $footer-gray-light:#d7dee4;
 $footer-gray-dark:#73767a;
+$dark-gray: #474a4f;
 
 
 // Indie logo Colors
