--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -6,8 +6,9 @@
     0 0 0 10px hsl(0, 0%, 60%),
     0 0 0 15px hsl(0, 0%, 90%);
 }
-#userprofile { @include span(3 of 12); background-color: blue; 
-	.userpic {@include user(large); top:20%; margin: 0 auto;}
+#userprofile { @include span(3 of 12 first); background-color: green; 
+	.userpic {@include user(large); top:20%; margin: 0 auto;
+		text-align: center;}
 	section {}
 	.userdesc { @include rob(1.1em, 400); 
 		h1 {font-weight:700;
@@ -17,9 +18,10 @@
 
 	}
 	.social {}
-	#profile {
-		h1{}
-		.userlist {}
-	}
-
 }
+	#profile { @include span(9 of 12 last); background-color:teal;
+		h1{}
+		.userlist {
+			
+		}
+	}
