--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,6 +31,7 @@ $dark-gray: #474a4f;
 $ind-red:   #BC4444;
 $ind-blue:  #466EAF;
 $ind-green: #237C23;
+$ind-gray:  #8f8d8e; 
 $yellow:    #f7c600;
 
 
