--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -17,11 +17,22 @@
 		p  {}
 
 	}
-	.social {}
+	.social {
+		a {color:$dark-gray; 
+			&:hover {color: darken($dark-gray,15%);}
+			}
+	}	
 }
-	#profile { @include span(9 of 12 last); background-color:teal;
-		h1{}
-		.userlist {
+	#profile { @include span(9 of 12 last);
+		h1 {@include rob(1.6em, 700); color:blue;}
+		h5 {@include rob(0.9em, 500); text-transform: uppercase;
+			    margin-bottom:gutter(); }
+		.userlist {@include span(3);
 			
-		}
+			ul{ margin-top:0; margin-bottom:0;
+			li { @include rob(1em, 300); }
+				}
+			}
+
+
 	}
