--- a/sass/lib/_mixins.scss
+++ b/sass/lib/_mixins.scss
@@ -61,3 +61,30 @@
   }
 }
 
+// // Indie Colors usage @include indie-color(art); 
+// @mixin indie-color ($color) {
+//   @if $color == 'art' {
+//     color: $ind-blue;
+//   }
+//   @if $color == 'design' {
+//     color: $ind-green;
+//   }
+//   @if $color == 'code' {
+//     color: $ind-red;
+//   }
+//   @else {
+//     color: $ind-gray;
+//   }
+// }
+
+// // Color
+// .col-art {
+//   @include indie-color(art);
+// }
+// .col-code {
+//   @include indie-color(code);
+// }
+// .col-design {
+//   @include indie-color(design);
+// } 
+
