--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -27,12 +27,18 @@
 		h1 {@include rob(1.6em, 700); color:blue;}
 		h5 {@include rob(0.9em, 500); text-transform: uppercase;
 			    margin-bottom:gutter(); }
-		.userlist {@include span(3);
+		.userlist, .extralist {@include span(3);
 			
 			ul{ margin-top:0; margin-bottom:0;
 			li { @include rob(1em, 300); }
 				}
 			}
 
-
+		.software {@include span(4);
+			ul { list-style-type: none; margin:0; padding: 0;
+				li { display: inline-block;
+					img {width:40px; height: 40px;}
+					}
+				}
+			}
 	}
