--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,6 +35,7 @@ $ind-gray:  #8f8d8e;
 $yellow:    #f7c600;
 
 
+
 // Materialize Color
 $primary-color: $ind-red;
 $primary-color-light: lighten($primary-color, 15%) !default;
@@ -60,6 +61,7 @@ $sm:   750px;
 @import "top";
 @import "component";
 @import "input";
+@import "modal";
 @import "profile";
 @import "button";
 @import "landing";
